--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "date-fns": "^2.24.0",
     "knex": "^0.95.11",
+    "nodemon": "^2.0.22",
     "sqlite3": "^5.0.1"
   },
   "engines": {
